# nanogui

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  wheels.yml
docs/: compilation.rst  conf.py  mkdoc_rst.py  release.rst
ext/coro/: coro.c  coro.h
include/nanogui/: arcball.h  borderlayout.h  button.h  canvas.h  checkbox.h  colorpicker.h  colorwheel.h  combobox.h  common.h  entypo.h  folderdialog.h  formhelper.h  glcanvas.h  glutil.h  graph.h  icons.h  imagepanel.h  imageview.h  knob.h  label.h  layout.h  messagedialog.h  metal.h  nanogui.h  object.h  opengl.h  popup.h  popupbutton.h  progressbar.h  python.h  renderpass.h  screen.h  scrollpanel.h  shader.h  slider.h  stackedwidget.h  tabheader.h  tabwidget.h  textarea.h  textbox.h  (+9 more)
nanogui/: __init__.py
python/: CMakeLists.txt  basics.cpp  button.cpp  canvas.cpp  color.cpp  entypo.cpp  example1.py  example2.py  example3.py  example4.py  glcanvas.cpp  glutil.cpp  icons.cpp  main.cpp  misc.cpp  nanovg.cpp  py_doc.h  python.h  render.cpp  render_test_1.py  render_test_2.py  render_test_3.py  render_test_4.py  tabs.cpp  textarea.cpp  textbox.cpp  theme.cpp  vector.cpp  widget.cpp
resources/: bin2c.cmake  fa-import.py  imageview_fragment.gl  imageview_fragment.gles  imageview_fragment.metal  imageview_vertex.gl  imageview_vertex.gles  imageview_vertex.metal  nanoguiConfig.cmake.in
src/: autorelease.mm  borderlayout.cpp  button.cpp  canvas.cpp  checkbox.cpp  colorpicker.cpp  colorwheel.cpp  combobox.cpp  common.cpp  darwin.h  darwin.mm  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example_icons.cpp  example_knob.cpp  folderdialog.cpp  glcanvas.cpp  glutil.cpp  graph.cpp  imagepanel.cpp  imageview.cpp  knob.cpp  label.cpp  layout.cpp  messagedialog.cpp  opengl.cpp  popup.cpp  popupbutton.cpp  progressbar.cpp  renderpass_gl.cpp  renderpass_metal.mm  screen.cpp  scrollpanel.cpp  shader.cpp  shader_gl.cpp  shader_metal.mm  slider.cpp  (+14 more)
src/python/: CMakeLists.txt  basics.cpp  button.cpp  canvas.cpp  color.cpp  example1.py  example2.py  example3.py  example_icons.py  formhelper.cpp  glfw.cpp  icons.cpp  layout.cpp  main.cpp  misc.cpp  nanovg.cpp  py_doc.h  python.h  render.cpp  render_test_0.py  render_test_2.py  render_test_3.py  render_test_4.py  tabs.cpp  textarea.cpp  textbox.cpp  theme.cpp  vector.cpp  widget.cpp
